[package]
name = "json_str"
version = "0.5.2"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
license = "Apache-2.0"
description = "Write json literals without ugly strings."
documentation = "https://docs.rs/json_str"
repository = "https://github.com/KodrAus/json_str"

[lib]
name = "json_str"
crate_type = [ "rlib", "dylib" ]
plugin = true

[features]
nightly = []

[dependencies]
